[package]
name = "timewarrior-grouped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
colored = "2"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
